# stereo_vision

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  calibration.py  camera_poses.npy  config.yaml  leftdistortion.npy  leftintrinsic.npy  license  optimized_poses.npy  package.toml  pointcloud_vs.py  r_matrix.npy  requirements.txt  rightdistortion.npy  rightintrinsic.npy  segmentation.py  slam2.py  stereo.py  t_matrix.npy  trajectory.txt  triangulation_test.py
src/: __init__.py  landmarks.py  loopclosure.py  main.cpp  pose_graph.py  slam2.py  visualize.py
src/algorithms/: __init__.py  bundle_adjustments.py  loopclosure.py
src/algorithms/depth_estimator/: rgbd.py  stereo_pair.py
src/algorithms/feature_extraction/: CMakeLists.txt  __init__.py  featureExtractor.h  feature_extractor.py  orb.py
src/algorithms/feature_extraction/ORBExtractor/bindings/: orb_py.cpp
src/algorithms/feature_extraction/ORBExtractor/include/: orb.h
src/algorithms/feature_extraction/ORBExtractor/src/: orb.cpp
src/algorithms/feature_extraction/Orb_slam_extractor/: CMakeLists.txt
src/algorithms/feature_extraction/Orb_slam_extractor/include/: featureExtractor.h  orb.h
src/algorithms/feature_extraction/Orb_slam_extractor/src/: main.cpp  orb.cpp
src/algorithms/frame/: __init__.py  frame.py  frame_manager.py
src/algorithms/landmark/: __init__.py  landmarkmanager.py  landmarks.py
src/algorithms/landmark/landmark/include/: frame.h  landmark.h  map.h
src/algorithms/landmark/landmark/src/: frame.cpp  landmark.cpp  map.cpp
src/algorithms/maper/: CMakeLists.txt  __init__.py
src/algorithms/maper/bindings/: frame_py.cpp  landmark_py.cpp  map_py.cpp
src/algorithms/maper/include/: frame.h  landmark.h  map.h
src/algorithms/maper/src/: frame.cpp  landmark.cpp  map.cpp
src/algorithms/pipeline/: pipelines.py
src/algorithms/tracking/: __init__.py  descriptors.py  pnp.py  tracker.py
src/atlas/: CMakeLists.txt  __init__.py
src/atlas/bindings/: atlas.cpp  atlas_py.cpp  frame_py.cpp  landmark_py.cpp  map_py.cpp
src/atlas/include/: atlas.h  frame.h  landmark.h  map.h  utils.h
src/atlas/src/: atlas.cpp  frame.cpp  landmark.cpp  map.cpp
src/camera/: camera.py
src/config/: config.py
src/core/: registory.py  slam2.py  slam_service.py
src/depth_estimator/: __init__.py  hit.py  hit.sh  stereo_pair.py  stereo_rectification.py
src/depth_estimator/Stereo_Triangulation/: CMakeLists.txt  bindings.cpp  triangulation.cpp  triangulation.h
src/feature_extractor/: CMakeLists.txt  __init__.py  featureExtractor.cpp  featureExtractor.h  feature_extractor.py  orb.py
src/feature_extractor/ORBExtractor/: CMakeLists.txt  __init__.py
src/feature_extractor/ORBExtractor/include/: orb.h
src/feature_extractor/ORBExtractor/src/: orb.cpp
src/interfaces/: CMakeLists.txt  __init__.py  bindings.cpp  camera_usb.py  csv_reader.py  interface.py  video_playback.py
src/interfaces/include/: camera_csv_source.h  camera_interface.h  imu_csv_source.h  imu_interface.h
src/interfaces/src/: camera_csv_source.cpp  imu_csv_source.cpp
src/motion_model/: motion_model.py
src/optimizer/: CMakeLists.txt  binding.cpp  edges.cpp  edges.h  optimizer.cpp  optimizer.h  vertex.h
src/pipeline/: __init__.py  pipelines.py
src/sensors/: CMakeLists.txt  __init__.py  bindings.cpp  camera.py  imu.py  sensors.py
src/sensors/include/: camera.h  imu.h
src/sensors/src/: camera.cpp  imu.cpp
src/server/: __init__.py  app.py
src/server/templates/: index.html
src/tracking/: Tracker.py  __init__.py  optical.py  tracker.py
src/utils/: vedio_capture.py  visualize.py
src/visualize/: CMakeLists.txt  visualize.cpp  visualize.h  visualize_py.cpp
test/: test_euroc.py  test_server.py  test_smoke.py
utils/: calibration.py
